start appusers schema

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -19,8 +19,18 @@ http {
 }
 }
 
+endpoints {
+    users = "users"
+    search_records = "search"
+    post_record = "entry"
+    update_record = "update"
+    delete_record = "delete"
+    auth = "auth"
+}
+
 dbhost {
     host_name = "kirchnerbusinesssolutions.com"
+    host_prefix = "pcsql"
     protocol = "http"
     host_port = 3603
 }
