update config values

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -14,7 +14,7 @@ test {
 }
 http {
   server {
-    server-header = "PiCenter Scala Endpoint Proxy REST API"
+    server-header = "PiCenter DB Explorer REST API"
   }
 }
 }
