add userConverter to AppUsersSQL

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -19,6 +19,19 @@ http {
 }
 }
 
+mysql = {
+  profile = "slick.jdbc.MySQLProfile$"
+  dataSourceClass = "slick.jdbc.DatabaseUrlDataSource"
+  properties = {
+    driver = "com.mysql.cj.jdbc.Driver"
+    url  = "jdbc:mysql://localhost:3306/shome"
+    user = "SHomeAdmin"
+    password = "kORCn7upp12tCHKNjA6AzVBrONaHqJqKXSVTymVpx44="
+  }
+}
+
+
+
 endpoints {
     users = "users"
     search_records = "search"
