add TestDBSpec test

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -29,8 +29,7 @@ mysql = {
     password = "kORCn7upp12tCHKNjA6AzVBrONaHqJqKXSVTymVpx44="
   }
 }
-
-
+Database.forConfig("mysql")
 
 endpoints {
     users = "users"
