--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -33,11 +33,13 @@ mysql = {
 endpoints {
     users = "users"
     search_records = "search"
+    search_user_records = "search/user"
     post_record = "entry"
     update_record = "update"
     delete_record = "delete"
     auth = "auth"
 }
+
 
 dbhost {
     host_name = "kirchnerbusinesssolutions.com"
@@ -46,10 +48,11 @@ dbhost {
     host_port = 3603
 }
 
-http {
+server {
 //  local host
   host = "127.0.0.1"
   port = 8080
+  token="Xl6g0QqvOC7AsgPRwLZCoWn4lq4PK4s7JI9wmwQqgi8="
 //  production, these are the configs heroku will use once we deploy
   host = ${?HOST}
   port = ${?PORT}
